--- a/tutorial/01 Intro/01.section.md
+++ b/tutorial/01 Intro/01.section.md
@@ -77,3 +77,29 @@ See the automatic interactive API documentation (provided by [Swagger UI](https:
 ## Alternative API docs
 
 Go to [ http://127.0.0.1:8000/redoc]( http://127.0.0.1:8000/redoc).
+
+See the alternative automatic documentation (provided by [ReDoc](https://github.com/Redocly/redoc))
+
+![ReDoc UI page screenshot](./index-02-redoc-simple)
+
+## Add a PUT request
+
+Add in the ```main.py```
+
+```Python
+...
+from pydantic import BaseModel
+
+...
+
+class Item(BaseModel):
+    name: str
+    price: float
+    is_offer: Union[bool, None] = None
+
+...
+
+@app.put("/items/{item_id}")
+async def update_item(item_id: int, item: Item):
+    return {"item_name": item.name, "item_id": item_id}
+```
