--- a/tutorial/01 Intro/01.section.md
+++ b/tutorial/01 Intro/01.section.md
@@ -103,3 +103,25 @@ class Item(BaseModel):
 async def update_item(item_id: int, item: Item):
     return {"item_name": item.name, "item_id": item_id}
 ```
+
+Go to [ http://127.0.0.1:8000/docs]( http://127.0.0.1:8000/docs).
+
+1. The interactive API documentation will be automatically updated, including the new body.
+2. Click on the button "Try it out", it allows you to fill the parameters and directly interact with the API.
+3. Then click on the "Execute" button, the user interface will communicate with your API, send the parameters, get the results and show them on the screen
+
+## NEXT - the trining includes:
+
+- Declaration of parameters from other different places as: headers, cookies, form fields and files.
+- How to set validation constraints as maximum_length or regex.
+- A very powerful and easy to use Dependency Injection system.
+- Security and authentication, including support for OAuth2 with JWT tokens and HTTP Basic auth.
+- More advanced (but equally easy) techniques for declaring deeply nested JSON models (thanks to Pydantic).
+- GraphQL integration with Strawberry and other libraries.
+- Many extra features (thanks to Starlette) as:
+    - WebSockets
+    - extremely easy tests based on HTTPX and pytest
+    - CORS
+    - Cookie Sessions
+    - ...and more.
+
